# PerceptronToTransformer

./: README.md  main.py  pyproject.toml
src/: activations.py  datasets.py  losses.py  mlp.py  perceptron.py
