[project]
name = "perceptron-to-transformer"
version = "0.0.1"
description = "Go from creating a single perceptron all the way to modern transformers, all from scratch with numpy"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "matplotlib>=3.10.7",
    "numpy>=2.3.4",
    "scikit-learn>=1.7.2",
    "tqdm>=4.67.1",
]
